--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "ember-rl-dropdown",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "directories": {
-    "doc": "doc",
     "test": "tests"
   },
   "scripts": {
     "start": "ember server",
-    "build": "ember build",
     "test": "ember test"
   },
-  "repository": "https://github.com/stefanpenner/ember-cli",
+  "repository": "https://github.com/rsschermer/ember-rl-dropdown",
   "engines": {
     "node": ">= 0.10.0"
   },
@@ -18,21 +16,32 @@
   "license": "MIT",
   "devDependencies": {
     "body-parser": "^1.2.0",
-    "broccoli-asset-rev": "0.3.0",
+    "broccoli-asset-rev": "0.3.1",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
-    "ember-cli": "0.0.47",
-    "ember-cli-content-security-policy": "0.1.3",
+    "ember-cli": "0.1.2",
+    "ember-cli-content-security-policy": "0.3.0",
+    "ember-export-application-global": "^1.0.0",
     "ember-cli-ic-ajax": "0.1.1",
-    "ember-cli-inject-live-reload": "^1.0.2",
+    "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.1.0",
     "ember-data": "1.0.0-beta.10",
     "express": "^4.8.5",
     "glob": "^4.0.5"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "mixin",
+    "component",
+    "dropdown",
+    "drop-down",
+    "drop",
+    "down"
   ],
   "ember-addon": {
     "configPath": "tests/dummy/config"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/rsschermer/ember-rl-dropdown/issues"
+  },
+  "homepage": "https://github.com/rsschermer/ember-rl-dropdown"
 }
