--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,4 @@
 {
   "name": "ember-rl-dropdown",
-  "dependencies": {
-    "ember": "components/ember#canary",
-    "ember-cli-shims": "0.1.1"
-  },
-  "resolutions": {
-    "ember": "canary"
-  }
+  "dependencies": {}
 }
